testsuite/tests/typecheck/should_fail/T23776.stderr
T23776.hs:8:6: error: [GHC-78249]
    Illegal invisible type pattern: @b
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

